# menuBarRecorder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: AudioHandler.cpp  AudioHandler.h  AudioRecorder.cpp  AudioRecorder.h  CustomLookAndFeel.h  MainContentComponent.cpp  MainContentComponent.h  MainWindow.h  RecordButton.h  SystemAudioDeviceSwitcher.cpp  SystemAudioDeviceSwitcher.h  SystemTray.h  SystemTray.mm  main.cpp
